App/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jodel-post-svc
  namespace: jodel
  labels:
    app: jodel-post-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: vuejs-test-app
